<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pill Plan</string>
    <string name="bienvenida">Bienvenida a</string>
    <string name="Explicacion">Hola, ¿Qué tal?
    Hemos creado esta aplicación para ti, y para ayudarte e informarte sobre la toma de las píldoras (ACOs).
    Para ello, te realizaremos algunas preguntas para poder conocerte e indicarte correctamente… </string>
    <string name="ADELANTE">¡ADELANTE!</string>
    <string name="SIGUIENTE">SIGUIENTE</string>
    <string name="establecer_alarma">ESTABLECER ALARMA</string>
    <string name="eliminar_alarma">ELIMINAR ALARMA</string>


    <string name="primera_pregunta">Has elegido tomar los ACOs por: </string>
    <!--    <string name="segunda_pregunta">¿Qué tipo de Anticonceptivos Orales Combinados utilizas? </string>-->
    <string name="tercera_pregunta">¿Qué formato de Anticonceptivos Orales Combinados tomas? </string>
    <string name="decision_propia">Decisión Propia</string>
    <string name="recomendacion_sanitaria">Recomendación Clínica</string>
    <string name="iconocentral">iconoCentral</string>


    //Swipe (menu)
    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Blister">Mi Blíster</string>
    <string name="Datos_Personales">Datos Personales</string>
    <string name="Pagina_Informacion">Infórmate</string>
    <string name="Calendario">Calendario/Estados</string>
    <string name="Alarma">Alarma de Toma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Texto_AlarmasACOS">Alarmas ACOS</string>
    <string name="Texto_BlisterACOS">! Ei, toca el blíster para indicar la toma de la píldora !</string>
    <string name="Texto_Calendario_EstadosACOS">Calendario de Estados/Tomas</string>
    <string name="Texto_Datos_PersolaesACOS">Datos Personales</string>
    <string name="Texto_Informacion_WEBACOS">Página gencat</string>
    <string name="imagen_pildora_0">imagen_pildora_0</string>
    <string name="imagen_pildora_1" tools:ignore="Typos">imagen_pildora_1</string>
    <string name="imagen_pildora_2">imagen_pildora_2</string>
    <string name="fab">fab</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nombre_persona" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--    Pestañas menú lateral-->
    <string name="menu_informate">Infórmate</string>
    <string name="menu_datos">Datos Personales</string>
    <string name="menu_Calendario">Mi Calendario</string>
    <string name="menu_alarmas">Mi Alarmas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_blister0">menu_blister0</string>
    <string name="imagen_pildora_3">imagen_pildora_3</string>
    <string name="imagen_pildora_4">imagen_pildora_4</string>
    <string name="imagen_pildora_5">imagen_pildora_5</string>
    <string name="imagen_pildora_6">imagen_pildora_6</string>
    <string name="imagen_pildora_7">imagen_pildora_7</string>
    <string name="imagen_pildora_8">imagen_pildora_8</string>
    <string name="imagen_pildora_9">imagen_pildora_9</string>
    <string name="imagen_pildora_10">imagen_pildora_10</string>
    <string name="imagen_pildora_11" tools:ignore="Typos">imagen_pildora_11</string>
    <string name="imagen_pildora_12">imagen_pildora_12</string>
    <string name="imagen_pildora_13">imagen_pildora_13</string>
    <string name="imagen_pildora_14">imagen_pildora_14</string>
    <string name="imagen_pildora_15">imagen_pildora_15</string>
    <string name="imagen_pildora_16">imagen_pildora_16</string>
    <string name="imagen_pildora_17">imagen_pildora_17</string>
    <string name="imagen_pildora_18">imagen_pildora_18</string>
    <string name="imagen_pildora_19">imagen_pildora_19</string>
    <string name="imagen_pildora_20">imagen_pildora_20</string>
    <string name="imagen_pildora_21">imagen_pildora_21</string>
    <string name="imagen_pildora_22">imagen_pildora_22</string>
    <string name="imagen_pildora_23">imagen_pildora_23</string>
    <string name="imagen_pildora_24">imagen_pildora_24</string>
    <string name="imagen_pildora_25">imagen_pildora_25</string>
    <string name="imagen_pildora_26">imagen_pildora_26</string>
    <string name="imagen_pildora_27">imagen_pildora_27</string>
    <string name="imagen_pildora_28">imagen_pildora_28</string>
    <string name="establece_tu_alarma_diaria">Establece tu alarma diaria</string>
    <string name="tomate_la_p_ldora">¡ Tómate la píldora !</string>
    <string name="acabado_blister">¡ Genial, has acabado tu Blíster! Ahora te cargaremos uno nuevo.</string>
    <string name="imagen_popup">imagen_popup</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="imagen_afirmacion">imagen_afirmacion</string>
    <string name="indicaEstado">Pulsa, para indicar tu estado de ánimo.</string>
    <string name="provisional">PROVISIONAL</string>
    <string name="selecciona_en_que_estado_de_animo_te_encuentras">
        Selecciona en que estado de ánimo te encuentras: </string>
    <string name="ENVIAR">enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="espanol">Español</string>
    <string name="catalan">Català</string>
    <string name="ingles">English</string>
    <string name="escoge_en_qu_idioma_ver_la_informacion">Escoge en qué idioma ver la información:</string>
    <string name="ver_sigiuente_video_cast">Ver sigiuente video</string>
    <string name="ver_sigiuente_video_cat">Veure següent video</string>
    <string name="ver_sigiuente_video_ingles">See next video</string>
    <string name="ver_documentacion_cast">Ver Doumentación</string>
    <string name="ver_documentacion_cat">Veure Doumentació</string>
    <string name="ver_documentacion_ingles">See Doumentation</string>
    <string name="cambiar_mi_blister">CAMBIAR MI BLÍSTER</string>
    <string name="cargar_mi_blister">CARGAR MI BLÍSTER</string>
    <string name="imagen21_pildora_29">imagen21_pildora_29</string>
    <string name="imagen21_pildora_30">imagen21_pildora_30</string>
    <string name="imagen21_pildora_31">imagen21_pildora_31</string>
    <string name="imagen21_pildora_32">imagen21_pildora_32</string>
    <string name="imagen21_pildora_33">imagen21_pildora_33</string>
    <string name="imagen21_pildora_34">imagen21_pildora_34</string>
    <string name="imagen21_pildora_35">imagen21_pildora_35</string>
    <string name="imagen21_pildora_36">imagen21_pildora_36</string>
    <string name="imagen21_pildora_37">imagen21_pildora_37</string>
    <string name="imagen21_pildora_38">imagen21_pildora_38</string>
    <string name="imagen21_pildora_39">imagen21_pildora_39</string>
    <string name="imagen21_pildora_40">imagen21_pildora_40</string>
    <string name="imagen21_pildora_41">imagen21_pildora_41</string>
    <string name="imagen21_pildora_42">imagen21_pildora_42</string>
    <string name="imagen21_pildora_43">imagen21_pildora_43</string>
    <string name="imagen21_pildora_44">imagen21_pildora_44</string>
    <string name="imagen21_pildora_45">imagen21_pildora_45</string>
    <string name="imagen21_pildora_46">imagen21_pildora_46</string>
    <string name="imagen21_pildora_47">imagen21_pildora_47</string>
    <string name="imagen21_pildora_48">imagen21_pildora_48</string>
    <string name="imagen21_pildora_49">imagen21_pildora_49</string>
    <string name="imagen21_pildora_50">imagen21_pildora_50</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="login">INICIA SESIÓN</string>
    <string name="edad">Edad</string>
    <string name="email">Email</string>
    <string name="movil">Móvil</string>
    <string name="registrarme">Registrarme</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="tus_datos_personales_registrados_son_los_siguientes_si_deseas_puedes_modificarlos">
        Tus datos personales registrados son los siguientes. Si deseas puedes modificarlos.</string>
    <string name="tu_edad_es">Tu edad es:</string>
    <string name="tu_email_es">Tu email es:</string>
    <string name="ver_mis_datos_actuales">Ver mis datos actuales</string>
    <string name="actualizar_mis_datos">Actualizar mis datos</string>
    <string name="ver_registro">Ver registro</string>
    <string name="textoCalendario">Aquí encontrarás  tus datos registrados: Toma de la pastilla, Estado de ánimo y si has tenido algún síntoma.</string>
    <string name="te_has_tomado_la_pildora">Te has tomado la píldora del día:</string>
    <string name="tu_estado_de_animo_ha_sido">Tu estado de ánimo ha sido:</string>
    <string name="emoticonomal">emoticonoMal</string>
    <string name="emoticonoterrible">emoticonoTerrible</string>
    <string name="muy_bien">MUY BIEN</string>
    <string name="bien">BIEN</string>
    <string name="genial">GENIAL</string>
    <string name="terrible">TERRIBLE</string>
    <string name="mal">MAL</string>
    <string name="registro_de_las_tomas_de_la_pildora">Registro de las tomas de la píldora.</string>
    <string name="toca_el_registro_para_ver_como_te_has_sentido_ese_dia">
        Toca el registro para ver cómo te has sentido ese día.</string>
    <string name="ojo_ya_has_tomado_la_pildora_de_este_dia">¡ OJO, ya has tomado la píldora de este día !</string>
    <string name="clica_para_salir">Clica para salir.</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada ha sido:</string>
    <string name="change_time">Programa tu alarma</string>
    <string name="select_time">Selecciona la hora:</string>
    <string name="_12_00">12:00 h</string>
    <string name="new_notification">TÓMATE LA PÍLDORA</string>
    <string name="not_long_in">No puedo iniciar sesión</string>
    <string name="borrar_mis_datos">Borrar mis datos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="o">o</string>
    <string name="correo">Pulsa el botón de "enviar" para quese registren las tomas a tu correo electrónico.¡ Recuerda que se reiniciará el registro y no podrás visualizarlo en la sección de Mi Calendario!</string>
    <string name="filtrar_por_estado_de_nimo_o_molestia">Filtrar por estado de ánimo o molestia</string>
    <string name="dias_olvido">Ver fechas de olvidos</string>
    <string name="filtrar">También, puedes filtrar por estados de ánimo o molestias:</string>
    <string name="filtrado_eleccion">Registro de fechas asociadas con el  estado de ánimo o molestia que has elegido:</string>
    <string name="enter_gmail_id">Enter gmail-id</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enviar_mail">Enviar Mail</string>
    <string name="icono_central">iconoCentral</string>
    <string name="_3_tomas_para_finalizar_el_blister">! 3 tomas para finalizar el blíster !</string>


</resources>