<?xml version="1.0" encoding="utf-8"?>

<!--CONTIENE TODOS LOS ITEMS QUE SE ENSEÑAN EN EL MENU LATERAL-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:theme="@style/Theme.Planificate.ModificarLetraNavDrawer"
            android:id="@+id/nav_informate"
            android:icon="@mipmap/icono_informacion"
            android:title="@string/menu_informate" />

        <item
            android:id="@+id/nav_blister"
            android:icon="@mipmap/icono_blister"
            android:title="@string/Blister" />

        <item
            android:id="@+id/nav_datos_personales"
            android:icon="@mipmap/icono_datos_personales"
            android:title="@string/menu_datos" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@mipmap/icono_calendario"
            android:title="@string/menu_Calendario" />
        <item
            android:id="@+id/nav_alarmas"
            android:icon="@mipmap/icono_alarmas"
            android:title="@string/menu_alarmas" />

    </group>
</menu>