<?xml version="1.0" encoding="utf-8"?>

<!--CONTIENE LAS DESTINACIONES DE LOS DIFERENTES FRAGMENTOS-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_informate">


    <fragment
        android:id="@+id/nav_informate"
        android:name="cat.urv.deim.asm.p2.planificate.ui.informate.InformateFragment"
        android:label="@string/menu_informate"
        tools:layout="@layout/fragment_informate" />


    <fragment
        android:id="@+id/nav_calendario"
        android:name="cat.urv.deim.asm.p2.planificate.ui.calendario.CaledarioFragment"
        android:label="@string/menu_Calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/nav_datos_personales"
        android:name="cat.urv.deim.asm.p2.planificate.ui.datos_personales.DatosPersonalesFragment"
        android:label="@string/menu_datos"
        tools:layout="@layout/fragment_datos_personales" />
    <fragment
        android:id="@+id/nav_alarmas"
        android:name="cat.urv.deim.asm.p2.planificate.ui.datos_personales.DatosPersonalesFragment"
        android:label="@string/menu_alarmas"
        tools:layout="@layout/fragment_datos_personales" />

    <fragment
        android:id="@+id/nav_blister"
        android:name="cat.urv.deim.asm.p2.planificate.ui.blister28.BlisterFragment"
        android:label="@string/Blister"
        tools:layout="@layout/fragment_blister">

    </fragment>

</navigation>