<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".TimePickerDialog">


    <TextView
        android:id="@+id/establecer_alarma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/establece_tu_alarma_diaria"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291">


    </TextView>

    <Button
        android:id="@+id/boton_hora"
        android:layout_width="195dp"
        android:layout_height="71dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/establecer_alarma"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/establecer_alarma"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/boton_cancelar"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/eliminar_alarma"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/establecer_alarma"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>