<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:onClick="onClick"
    android:background="@color/colorPrimary"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Popup3">

    <ImageView
        android:id="@+id/imagen_popup"
        android:layout_width="130dp"
        android:layout_height="114dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imagen_popup"
        android:src="@drawable/ic_confirmacion_toma_pildora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_popup">

    </ImageView>

    <TextView
        android:id="@+id/text_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/ojo_ya_has_tomado_la_pildora_de_este_dia"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

    </TextView>

    <TextView
        android:id="@+id/indicaEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clica_para_salir"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_popup"
        app:layout_constraintVertical_bias="0.134">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>