<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/iconoCentral"
        android:layout_width="327dp"
        android:layout_height="377dp"
        android:backgroundTint="@color/fondo"
        android:contentDescription="@string/iconocentral"
        android:src="@mipmap/pill_plan_icono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/bienvenida_planificate"
        android:layout_width="343dp"
        android:layout_height="129dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/iconoCentral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/pill_plan"
        android:layout_width="343dp"
        android:layout_height="129dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/iconoCentral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_planificate"
        app:layout_constraintVertical_bias="0.647" />


</androidx.constraintlayout.widget.ConstraintLayout>